--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/equationTextView"
+            android:layout_width="match_parent"
+            android:layout_height="62dp"
+            android:layout_gravity="center_vertical"
+            android:textSize="20sp"
+            android:hint="@string/equationPrev"
+            android:textColor="@color/grey2" />
+
         <EditText
             android:id="@+id/resultText"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="119dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="30sp"
