--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn01Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn01"
                 android:textSize="25sp" />
 
@@ -52,7 +52,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn02Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn02"
                 android:textSize="25sp" />
 
@@ -62,7 +62,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn03Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn03"
                 android:textSize="25sp" />
 
@@ -90,7 +90,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn04Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn04"
                 android:textSize="25sp" />
 
@@ -100,7 +100,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn05Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn05"
                 android:textSize="25sp" />
 
@@ -110,7 +110,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn06Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn06"
                 android:textSize="25sp" />
 
@@ -138,7 +138,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn07Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn07"
                 android:textSize="25sp" />
 
@@ -148,7 +148,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn08Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn08"
                 android:textSize="25sp" />
 
@@ -158,7 +158,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn09Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn09"
                 android:textSize="25sp" />
 
@@ -196,7 +196,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/buttonborder"
-                android:onClick="btn00Click"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btn00"
                 android:textSize="25sp" />
 
@@ -206,7 +206,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/redbuttonborder"
-                android:onClick="btnDotClick"
+                android:onClick="numericButtonClicked"
                 android:text="@string/btnDot"
                 android:textSize="25sp" />
 
