--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="grey1">#A9A9A9</color>
     <color name="grey2">#808080</color>
     <color name="grey3">#505050</color>
+    <color name="green1">#63939c</color>
+    <color name="green2">#5F898D</color>
+<!--    <color name="lightRed">#bf1628</color>-->
 </resources>
