modifications to UI Design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,6 @@
     <color name="grey2">#808080</color>
     <color name="grey3">#505050</color>
     <color name="green1">#63939c</color>
-    <color name="green2">#5F898D</color>
+    <color name="green2">#63939c</color>
 <!--    <color name="lightRed">#bf1628</color>-->
 </resources>
