--- a/app/src/main/res/layout/activity_base_converter.xml
+++ b/app/src/main/res/layout/activity_base_converter.xml
@@ -26,8 +26,7 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="@drawable/converter_btn_border"/>
+                android:layout_height="5dp" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -38,8 +37,6 @@
                 android:gravity="center"
                 android:text="@string/inputBase"
                 android:textColor="@color/green1" />
-
-
 
             <LinearLayout
                 android:id="@+id/chosen_base"
@@ -52,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/converter_btn_border"
+                    android:background="@drawable/green1border"
                     android:text="@string/decimal" />
 
                 <Button
@@ -60,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/converter_btn_border"
+                    android:background="@drawable/green1border"
                     android:text="@string/binary"/>
 
                 <Button
@@ -68,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/converter_btn_border"
+                    android:background="@drawable/green1border"
                     android:text="@string/hex" />
 
                 <Button
@@ -76,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/converter_btn_border"
+                    android:background="@drawable/green1border"
                     android:text="@string/octal" />
 
             </LinearLayout>
@@ -101,16 +98,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/converter_btn_border"
+                    android:background="@drawable/green1border"
                     android:text="@string/converterCalculate" />
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/output"
+            <TextView
+                android:id="@+id/textView3"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"></LinearLayout>
+                android:layout_height="wrap_content"
+                android:text="@string/decimal" />
+
+            <TextView
+                android:id="@+id/decimal_calc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
         </LinearLayout>
 
 
