--- a/app/src/main/res/layout/activity_base_converter.xml
+++ b/app/src/main/res/layout/activity_base_converter.xml
@@ -50,6 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:backgroundTint="@color/green2"
+                    android:onClick="decimalClick"
                     android:text="@string/decimal" />
 
                 <Button
