modification to button logic

--- a/app/src/main/res/layout/activity_base_converter.xml
+++ b/app/src/main/res/layout/activity_base_converter.xml
@@ -145,6 +145,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="58dp"
                     android:layout_weight="1"
+                    android:onClick="calculateClick"
                     android:backgroundTint="@color/green2"
                     android:text="@string/converterCalculate" />
 
